print out emails sent in the console

--- a/bookr/templates/registration/password_reset_done.html
+++ b/bookr/templates/registration/password_reset_done.html
@@ -8,7 +8,7 @@ Password reset
 
 <h2>Password reset sent</h2>
 
-<p>Actually no, we haven't sent an email, because currently we don't have an email server.</p>
+<p>Actually no, we haven't sent an email, because currently we don't have an email server, but <strong>if you running the app locally, you can check the email and copy the link in your console.</strong></p>
 
 
 {% endblock %}
