--- a/books/templates/books/book_list_add.html
+++ b/books/templates/books/book_list_add.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h2>Add a new book to your list</h2>
 
-<p>Select a book from our database:</p>
+<h4>Select a book from our database:</h4>
 
 <form method="post" action="">
     {% csrf_token %}
@@ -19,6 +19,19 @@
     </button>
 </form>
 
-<p>Can't find a book? <a href="#">Create it here!</a></p>
+<h4>Or search on OpenLibrary for a new book:</h4>
 
+<input type="text" name="q" id="bookSearchInput">
+<a id="bookSearchLink" class="waves-effect waves-light btn" href="{% url 'books:book_search' %}">
+    <i class="material-icons left">search</i>
+    Search
+</a>
+
+{% endblock %}
+
+{% block extra_js_inline %}
+$( "#bookSearchLink" ).click(function( event ) {
+    event.preventDefault();
+    window.location = this.href + '?q=' + encodeURIComponent($('#bookSearchInput').val());
+  });
 {% endblock %}
