--- a/bookr/templates/django_registration/registration_form.html
+++ b/bookr/templates/django_registration/registration_form.html
@@ -14,7 +14,7 @@ Sign up
 {% csrf_token %}
 {% form form=form %}{% endform %}
 
-<button type="submit" name="_submit" class="btn">Submit</button>
+<button type="submit" name="_submit" class="waves-effect waves-light btn orange accent-2">Submit</button>
 </form>
 
 <p><a href="{% url 'login' %}">Already have an account?</a></p>
