--- a/bookr/templates/base.html
+++ b/bookr/templates/base.html
@@ -42,8 +42,8 @@
         </div>
     </main>
     <script
-        src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
     {% include 'material/includes/material_js.html' %}
     <script>
