--- a/bookr/templates/registration/login.html
+++ b/bookr/templates/registration/login.html
@@ -26,7 +26,7 @@ Log in
 {% csrf_token %}
 {% form form=form %}{% endform %}
 
-<button type="submit" name="_submit" class="btn">Submit</button>
+<button type="submit" name="_submit" class="waves-effect waves-light btn orange accent-2">Submit</button>
 <input type="hidden" name="next" value="{{ next }}">
 </form>
 
