--- a/bookr/templates/registration/password_reset_form.html
+++ b/bookr/templates/registration/password_reset_form.html
@@ -15,7 +15,7 @@ Password reset
 {% csrf_token %}
 {% form form=form %}{% endform %}
 
-<button type="submit" name="_submit" class="btn">Reset my password</button>
+<button type="submit" name="_submit" class="waves-effect waves-light btn orange accent-2">Reset my password</button>
 </form>
 
 
