--- a/books/templates/books/book_search.html
+++ b/books/templates/books/book_search.html
@@ -13,7 +13,7 @@
     {% csrf_token %}
     {% form form=form %}{% endform %}
 
-    <button type="submit" name="_submit" class="btn">
+    <button type="submit" name="_submit" class="waves-effect waves-light btn orange accent-2">
         <i class="material-icons left">library_add</i>
         Add book
     </button>
