add top 5 rated books on dashboard

--- a/bookr/static/css/app.css
+++ b/bookr/static/css/app.css
@@ -34,7 +34,7 @@ img.book-cover{
     line-height: 270px;
 }
 
-.card-action .book-edit{
+.card-action .book-edit, .card-action .book-listings{
     float: right;
 }
 
